--- a/pwa-planteau-api/client/src/assets/css/variable.css
+++ b/pwa-planteau-api/client/src/assets/css/variable.css
@@ -1,9 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 @font-face {
   font-family: 'Lucidity Condensed';
   src: url('../fonts/lucidity-condensed.ttf') format('truetype');
   font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pacifico';
+  src: url('../fonts/Pacifico.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-ExtraLight.otf') format('opentype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-SemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/Manrope-ExtraBold.otf') format('opentype');
+  font-weight: 800;
   font-style: normal;
 }
 
@@ -40,7 +88,7 @@
   /* === Typographie === */
   --font-h1: 'Lucidity Condensed', Arial, sans-serif;
   --font-h2: 'Pacifico', cursive, sans-serif;
-  --font-p: 'Manrope', Arial, sans-serif;
+  --font-p: 'Manrope', sans-serif;
 
   /* === Tailles de texte === */
   --text-xs: 0.75rem;    /* 12px */
