--- a/pwa-planteau-api/client/src/assets/css/layout.css
+++ b/pwa-planteau-api/client/src/assets/css/layout.css
@@ -9,13 +9,16 @@
   margin-right: auto;
   background: var(--color-white);
   box-shadow: 0 0 24px 0 rgba(0,0,0,0.04);
-  border-radius: 16px;
+  border-radius: 0 var(--radius-sm) var(--radius-sm) 0;
 }
 
 @media (min-width: 1024px) {
   .page-centered {
-    width: 100%;
-
+    width: 60vw;
+    max-width: none;
+    height: 90vh;
+    max-height: 90vh;
+    overflow-y: auto;
   }
 }
 
@@ -34,5 +37,7 @@
     box-shadow: 0 0 32px 0 rgba(0,0,0,0.08);
     margin-left: auto;
     margin-right: auto;
+    height: 90vh;
+    overflow: hidden;
   }
 }
