--- a/pwa-planteau-api/client/src/index.css
+++ b/pwa-planteau-api/client/src/index.css
@@ -19,6 +19,10 @@ html, body {
 @media (min-width: 1024px) {
   html, body {
     background-color: var(--color-black);
+    overflow: hidden;
+  }
+  .navbar-layout {
+    background-color: var(--color-black);
   }
 }
 
