--- a/pwa-planteau-api/client/src/assets/css/layout.css
+++ b/pwa-planteau-api/client/src/assets/css/layout.css
@@ -8,7 +8,6 @@
   margin-left: auto;
   margin-right: auto;
   background: var(--color-white);
-  box-shadow: 0 0 24px 0 rgba(0,0,0,0.04);
   border-radius: 0 var(--radius-sm) var(--radius-sm) 0;
 }
 
@@ -20,6 +19,8 @@
     max-height: 90vh;
     overflow-y: auto;
     border-radius: 0 var(--radius-sm) var(--radius-sm) 0;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 }
 
