--- a/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
+++ b/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
@@ -18,12 +18,18 @@
 }
 }
 
+
 .plant-collection-grid {
-	background: var(--color-white);
-	border-radius: var(--radius-md);
-	padding: 1rem;
-	column-count: 2;
-	column-gap: 1rem;
+		background: var(--color-white);
+		border-radius: var(--radius-md);
+		padding: 1rem;
+		column-gap: 1rem;
+}
+
+@media (min-width: 600px) {
+	.plant-collection-grid {
+		column-count: 2;
+	}
 }
 
 .plant-card {
