feat: extract PlantSelector component and refactor task display

--- a/pwa-planteau-api/client/src/features/watering/css/WateringList.css
+++ b/pwa-planteau-api/client/src/features/watering/css/WateringList.css
@@ -1,9 +1,9 @@
 @import '../../../assets/css/variable.css';
 
 .add-task-btn {
-	position: absolute;
-	right: 2rem;
-	bottom: 2rem;
+	position: fixed;
+	right: 22rem;
+	bottom: 4rem;
 	z-index: 100;
 }
 
