--- a/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
+++ b/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
@@ -37,3 +37,29 @@
 	margin-bottom: 1rem;
 	width: 100%;
 }
+
+.add-task-btn {
+	position: fixed;
+	right: 22rem;
+	bottom: 4rem;
+	z-index: 100;
+}
+
+.add-task-btn svg path {
+	fill: var(--color-primary);
+	transition: fill 0.2s;
+}
+
+.add-task-btn:hover svg path {
+	fill: var(--color-tertiary);
+}
+
+@media (max-width: 600px) {
+	.add-task-btn {
+		position: fixed;
+		right: 1rem;
+		bottom: 4.5rem;
+		width: 56px;
+		height: 56px;
+	}
+}
