--- a/pwa-planteau-api/client/src/features/watering/css/TodayTasks.css
+++ b/pwa-planteau-api/client/src/features/watering/css/TodayTasks.css
@@ -15,6 +15,17 @@
   color: var(--color-tertiary);
   border-radius: var(--radius-sm);
   font-family: var(--font-p);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.task-cards input[type="checkbox"] {
+  margin-left: 1rem;
+  accent-color: var(--color-secondary, #7a9c3a);
+  width: 1.2em;
+  height: 1.2em;
 }
 
 .task-cards-hover:hover {
