--- a/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
+++ b/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
@@ -1,4 +1,3 @@
-
 @import '../../../assets/css/variable.css';
 
 .plant-collection-title {
@@ -62,4 +61,27 @@
 		width: 56px;
 		height: 56px;
 	}
+}
+
+/* Responsive: bouton + dans la carte blanche sur desktop */
+@media (min-width: 900px) {
+  .page-centered {
+    position: relative;
+  }
+  .add-task-btn {
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
+    z-index: 10;
+  }
+}
+
+@media (max-width: 900px) {
+  .add-task-btn {
+    position: fixed;
+    right: 1rem;
+    bottom: 4.5rem;
+    width: 56px;
+    height: 56px;
+  }
 }
