feat: inscription foyer avec code + messages d'accueil

--- a/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
+++ b/pwa-planteau-api/client/src/features/plant/css/PlantCollection.css
@@ -85,3 +85,9 @@
     height: 56px;
   }
 }
+
+.plant-empty-message {
+  font-family: var(--font-h2);
+  color: var(--color-tertiary-hover);
+  font-size: var(--text-xl);
+}
