--- a/pwa-planteau-api/client/src/features/watering/css/Header.css
+++ b/pwa-planteau-api/client/src/features/watering/css/Header.css
@@ -1,3 +1,16 @@
+.header-popup-btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.header-profile-btn {
+  border-bottom: 1px solid var(--color-primary);
+  margin-bottom: 0.3rem;
+  padding-bottom: 0.5rem;
+  width: 100%;
+}
 @import '../../../assets/css/variable.css';
 
 .header-title {
